# openwrt-packages

./: README.md
utils/hmlangw/: Makefile
utils/hmlangw/files/: hmlangw.config  hmlangw.init
utils/mdio-tool/: Makefile
utils/qtools/: Makefile
utils/qtools/patches/: 001_fix_compile.patch
utils/realtek-poe-ti/: Makefile
utils/realtek-poe-ti/files/etc/config/: poe
utils/realtek-poe-ti/files/etc/init.d/: poe
utils/realtek-poe-ti/src/: CMakeLists.txt  realtek-poe-ti.c  tps23861.c  tps23861.h  tps23861_mappings.h
utils/upd72020x-load/: Makefile
utils/wasp_downloader/: Makefile
utils/wasp_uploader/: Makefile
